[package]
name = "weather-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = { version = "0.10", features = ["wasmedge_ssl"] }
tokio_wasi = "1"
webhook-flows = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
